# crew-demo

./: openrouter-models.txt
crews/: .env.example  README.md  pyproject.toml
crews/knowledge/: user_preference.txt
crews/src/testing_crews/: crew.py  main.py
crews/src/testing_crews/config/: agents.yaml  tasks.yaml  tools.yaml
crews/src/testing_crews/tools/: human_input_tool.py  tavily_search_tool.py
flows/: README.md  pyproject.toml  trip_planning_flow.html
flows/output/: attractions.json  complete_trip_plan.md  trip_details.json
flows/src/travel_flow/: main.py  models.py
flows/src/travel_flow/tools/: tavily_search_tool.py
