[project]
name = "testing_crews"
version = "0.1.0"
description = "testing-crews using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
testing_crews = "testing_crews.main:run"
run_crew = "testing_crews.main:run"
train = "testing_crews.main:train"
replay = "testing_crews.main:replay"
test = "testing_crews.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
